update code base for scanning
